# stm32-cmake-boilerplate

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run_on_target.gdb  st_nucleo_g0.cfg
.github/actions/: cmake.yaml
.github/workflows/: cmake.yaml
Examples/blinky-example/: CMakeLists.txt  blinky.c
Examples/cubemx-example/: BlinkyTask.cpp  CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSHooks.c
Examples/cubemx-example/cubemx-example-cubemx/: .mxproject  Makefile  cubemx-example-cubemx.ioc
Examples/cubemx-example/cubemx-example-cubemx/Core/Inc/: main.h  stm32g0xx_it.h
Examples/cubemx-example/cubemx-example-cubemx/Core/Src/: app_freertos.c  gpio.c  main.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c  usart.c
Examples/simple-example/: CMakeLists.txt  main.c
Src/: Stm32BoilerplateConfig.h.in
Src/CppFixes/: CppFixes.cpp
Src/DynamicMemory/: CppDynamicFixes.cpp  MallocFixes.c
Src/FreeRTOS/: cmsis_os.h
Src/SysCalls/: SysCalls.c
cmake/: default-build-type.cmake  fetch-gcc-arm.cmake  stm32-boilerplate.cmake
tests/: test_builds.py
